Added functionality for create or update a reaction in a post by a user